# PhyPiDAQ

./: CONTRIBUTING.md  Documentation_en.md  Dokumentation_de.md  LICENSE  PhyPiConf.daq  README.md  ReleaseNotes  ReleaseNotes.md  activate_phypy.sh  default.daq  install_user.sh  installlibs.sh  phypi.desktop  phypi.py  phypi_demo.desktop  pyproject.toml  requirements.txt  run_phypi.py  setup.py
config/: ADS1115Config.yaml  ADXL345Config.yaml  BME680Config.yaml  BMP280Config.yaml  BMP388Config.yaml  BMPx80Config.yaml  INA219Config.yaml  MAX31855Config.yaml  PL1000Config.yaml  RC1xx.yaml  TCS34725Config.yaml  TSL45315Config.yaml  TelematicsAccelerometerConfig.yaml  TelematicsConfig.yaml  VL53LxConfig.yaml
docs/: Dependencies.md  DevelopersGuide.md  Documentation_en.md  Dokumentation_de.md  PackageStructure.md  ReleaseGuide.md  resources.md
examples/: FreqGen.py  GPIO-In-Out.py  RePlot.py  ToyData.daq  burnIn_BME680.py  display_analog.py  display_analog2.py  display_analog_2_channels.py  grun.py  poissonFlash.py  poissonLED.py  readPipe.py  readWebsocket.py  read_18B20.py  read_ADS1115.py  read_ADXL345.py  read_BME280.py  read_BME680.py  read_BMP280.py  read_BMP388.py  read_BMPx80.py  read_INA219.py  read_MAX31855.py  read_MCP3x08.py  read_MMA8451.py  read_Pipe.py  read_TSL45315.py  read_Telematics.py  read_Websocket.py  read_analog.py  read_test.py  runOsci.py  scGammaDetector.py  sendPipe2ws.py  set_MCP4725.py  showRC102Spectrum.py  showRC1xxSpectrum.py  test_websocket.daq
phypidaq/: ADS1115Config.py  ADXL345Config.py  AS7262Config.py  AS7265xConfig.py  DataGraphs.py  (+49 more)
(+61 files in other folders)
